Fixes #326, Icons are stretched (wider) on Linux
Also fixes some issues with the search textboxes on the toolbar and in the tag selector, including compression of the search cancel button

--- a/chrome/skin/default/zotero/overlay.css
+++ b/chrome/skin/default/zotero/overlay.css
@@ -95,7 +95,17 @@
 	list-style-image: url(chrome://zotero/skin/tag-selector.png);
 }
 
+/* Hard-code this to fix toolbar icon compression on Linux */
+#zotero-pane toolbar
+{
+	height: 32px !important;
+}
 
+/* Remove extra padding on Linux */
+#zotero-pane {
+	padding-top: 0;
+	padding-bottom: 0;
+}
 
 /* These fix a rendering bug in Fx2.0b2 */
 #zotero-pane toolbarbutton .toolbarbutton-text
@@ -180,6 +190,7 @@
 
 #zotero-tb-search
 {
+	font-size: 11px !important; /* Keep font size in Linux within reason */
 	width: 150px;
 }
 
@@ -190,10 +201,13 @@
 
 #zotero-tb-search-cancel
 {
-	margin: 0px;
-	padding: 0px;
+	width: 10px;
+	height: 10px;
+	margin: 0;
+	padding: 0;
 	cursor: default;
 	list-style-image: url('chrome://zotero/skin/search-cancel.png');
+	-moz-appearance: none !important; /* Fix rendering problems on Linux */
 }
 
 #zotero-tb-search-cancel:hover:active
